--- a/DreamIsland/Views/Cars/Details.cshtml
+++ b/DreamIsland/Views/Cars/Details.cshtml
@@ -79,12 +79,19 @@
 
 @section Scripts{
     <script>
-        $(function () {
-            $("#description").click(function () {
-                $(this).text(function (i, text) {
+        //$(function () {
+        //    $("#description").click(function () {
+        //        $(this).text(function (i, text) {
+        //            return text === "Less Info" ? "More Info" : "Less Info";
+        //        })
+        //    });
+        //})
+
+        $("#description").click(function(){
+        $("#collapseExample").toggle("slow");
+        $(this).text(function (i, text) {
                     return text === "Less Info" ? "More Info" : "Less Info";
-                })
-            });
-        })
+                });
+    });
     </script>
 }
