--- a/DreamIsland/Views/Home/Index.cshtml
+++ b/DreamIsland/Views/Home/Index.cshtml
@@ -113,7 +113,7 @@ else
 
 <div class="row">
     <div class="col-12 text-center">
-        <button class="btn btn-primary" id="statistics-button">Our Stats</button>
+        <button class="btn btn-primary" id="statistics-button"><i class="fas fa-chart-bar"></i> Our Stats</button>
     </div>
 </div>
 
@@ -132,7 +132,7 @@ else
 
 <div class="row">
     <div class="col-12 text-center">
-        <button class="btn btn-primary" id="find-me">Show my location</button><br />
+        <button class="btn btn-primary" id="find-me"><i class="fas fa-map-marked"></i> Show my location</button><br />
         <p id="status"></p>
         <a id="map-link" target="_blank"></a>
     </div>
