--- a/DreamIsland/Views/Cars/Details.cshtml
+++ b/DreamIsland/Views/Cars/Details.cshtml
@@ -23,7 +23,7 @@
             </button>
             </p>
             <div class="collapse" id="collapseExample">
-                <div class="card card-body">
+                <div class="card card-body" style="border-radius: 25px;">
                     @Model.Description
                     </p>
                     <div class="form-group">
