--- a/DreamIsland/Views/Islands/Details.cshtml
+++ b/DreamIsland/Views/Islands/Details.cshtml
@@ -23,7 +23,7 @@
             </button>
             </p>
             <div class="collapse" id="collapseExample">
-                <div class="card card-body">
+                <div class="card card-body" style="border-radius: 25px;">
                     @Model.Description
                     <p class="card-text">Area: @(Model.SizeInSquareKm + " km")<sup>2</sup></p>
                 </div>
