--- a/DreamIsland/wwwroot/css/site.css
+++ b/DreamIsland/wwwroot/css/site.css
@@ -68,6 +68,7 @@ body {
     /* Margin bottom by footer height */
     margin-bottom: 60px;
     background-color: #d6d6d6;
+    font-family: 'Merriweather', serif;
 }
 
 .footer {
@@ -95,3 +96,23 @@ body {
 .dropdown:hover .dropdown-toggle {
     background-color: #4e54fd;
 }
+
+#myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: #1b6ec2;
+    color: white;
+    cursor: pointer;
+    padding: 10px;
+    border-radius: 10px;
+    font-size: 18px;
+}
+
+    #myBtn:hover {
+        background-color: #555;
+    }
