--- a/DreamIsland/Areas/Identity/Pages/Account/Register.cshtml
+++ b/DreamIsland/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,6 +4,12 @@
     ViewBag.Title = "Register";
 }
 
+<style>
+    body {
+  background-image: url("/islandforformbg.jpg");
+}
+</style>
+
 <div class="row">
     <div class="col-md-4 offset-md-4">
         <h2 class="text-center">@ViewBag.Title</h2>
