Deployment to Azure and adding a FAQ section

--- a/DreamIsland/Views/Shared/_Layout.cshtml
+++ b/DreamIsland/Views/Shared/_Layout.cshtml
@@ -76,7 +76,9 @@
 
     <footer class="border-top footer text-muted" style="background-color: #ebebeb;">
         <div class="container text-dark">
-            &copy; @DateTime.UtcNow.Year - DreamIsland - <a class="text-dark text-decoration-none" asp-area="" asp-controller="Home" asp-action="Privacy"><i class="fas fa-mask"></i> Privacy</a>
+            &copy; @DateTime.UtcNow.Year - DreamIsland - 
+            <a class="text-dark text-decoration-none" asp-area="" asp-controller="Home" asp-action="Privacy"><i class="fas fa-mask"></i> Privacy</a> -
+            <a class="text-dark text-decoration-none" asp-area="" asp-controller="Home" asp-action="FAQ"><i class="fas fa-question"></i></i> FAQ</a>
         </div>
     </footer>
     <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-chevron-up"></i></button>
