--- a/DreamIsland/Views/Home/FAQ.cshtml
+++ b/DreamIsland/Views/Home/FAQ.cshtml
@@ -169,12 +169,12 @@
 
     .panel-heading [data-toggle="collapse"]:after {
         font-family: 'Glyphicons Halflings';
-        content: "e072"; /* "play" icon */
+        content: "e072"; 
         float: right;
         color: #F58723;
         font-size: 18px;
         line-height: 22px;
-        /* rotate "play" icon from > (right arrow) to down arrow */
+
         -webkit-transform: rotate(-90deg);
         -moz-transform: rotate(-90deg);
         -ms-transform: rotate(-90deg);
@@ -183,7 +183,7 @@
     }
 
     .panel-heading [data-toggle="collapse"].collapsed:after {
-        /* rotate "play" icon from > (right arrow) to ^ (up arrow) */
+
         -webkit-transform: rotate(90deg);
         -moz-transform: rotate(90deg);
         -ms-transform: rotate(90deg);
